# chess_rs

./: .env  .gitignore  Cargo.toml  data.db  sqlite3.lib
migrations/2023-07-30-124010_chess/: down.sql  up.sql
src/: amove.rs  bit_board.rs  bit_constant.rs  bit_effect.rs  bit_possible.rs  board.rs  board_constant.rs  common.rs  coord.rs  database.rs  evaluation.rs  lib.rs  main.rs  manual.rs  manual_move.rs  models.rs  piece.rs  schema.rs  utility.rs
tests/: test_lib.rs
tests/xqf/: data.db
