[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rand = "0.8.3"
time = "0.1.12"
regex = "0.1.41"
num_enum = "0.6.1"
encoding = "0.2"
rusqlite = "0.29"
#serde = { version = "1.0", features = ["derive"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rayon = "1.7"
diesel = { version = "2.1.0", features = ["sqlite", "r2d2"] }
dotenvy = "0.15"